<resources>
    <string name="app_name">ccc</string>
    <string name="hello">Hello man</string>
    <string name="login_button">LOG IN</string>
    <string name="name">Username</string>
    <string name="login_mess">Press button to play audio</string>
    <string name="PhiCato">PhiCato Technology</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="play_button">PLAY AUDIO</string>
    <string name="change_image">IMAGE CHANGE</string>
</resources>
